plans fix color contrast

--- a/src/style/_basic.scss
+++ b/src/style/_basic.scss
@@ -5,7 +5,7 @@
     gap: 1rem;
 
     .pulse--basic--heading {
-        color: #00ad6a;
+        color: #00804F;
         margin-right: 1rem;
         font-size: 1.25rem;
         line-height: 1.15;
