--- a/src/style/_business.scss
+++ b/src/style/_business.scss
@@ -12,7 +12,7 @@
 
     .business--recommended {
         border-radius: .5rem .5rem 0 0;
-        background: #00ad6a;
+        background: #008552;
         color: #fff;
         font-size: .75rem;
         font-weight: 700;
@@ -27,7 +27,7 @@
         gap: 2rem;
 
         .business--heading {
-            color: #00ad6a;
+            color: #00804F;
             font-size: 2.25rem;
             letter-spacing: -1.5px;
         }
