--- a/src/style/_features.scss
+++ b/src/style/_features.scss
@@ -26,7 +26,7 @@
         gap: 2rem;
 
         .features--heading {
-            color: #00ad6a;
+            color: #00804F;
             font-size: 2.25rem;
             letter-spacing: -1.5px;
             line-height: 1;
